fix: added publish script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc",
+    "release": "bunx changeset publish",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
