--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,18 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 22.x
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@sousaivan'
 
       - run: bun install
+      
+      # Setup npm authentication - this creates .npmrc with the token
+      - name: Setup NPM Auth
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
