--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc",
     "release": "bunx changeset publish",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "bun run build"
   },
   "keywords": [
     "vue",
