fix: publishing scope

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-window-bridge",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Vue composable for managing multiple windows across displays, with cross-window communication",
   "type": "module",
   "main": "dist/index.js",
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc",
-    "release": "bunx changeset publish",
+    "release": "bunx changeset publish --access public",
     "prepublishOnly": "bun run build"
   },
   "keywords": [
@@ -48,5 +48,8 @@
   "bugs": {
     "url": "https://github.com/sousaivan99/vue-window-bridge/issues"
   },
-  "homepage": "https://github.com/sousaivan99/vue-window-bridge#readme"
+  "homepage": "https://github.com/sousaivan99/vue-window-bridge#readme",
+  "publishConfig": {
+    "access": "public"
+  }
 }
