--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,15 @@
     /* Strictness */
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    /* If NOT transpiling with TypeScript: */
-    "moduleResolution": "Bundler",
-    "module": "ESNext",
+    /* Module resolution */
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
     "noEmit": true,
     /* If your code runs in the DOM: */
     "lib": ["es2022", "dom", "dom.iterable"],
-    
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 } 
